ComboBox: fix currentValue not being updated on model changes

Make sure we call updateCurrentValue() where necessary.

Fixes: QTBUG-83554
Change-Id: Iad593c2fc094a26429de1eda91bbdb152ffee2c2
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit 3adeceaa1cfe5fae55ca6bd75226c52363a7e7d3)
Reviewed-by: Qt Cherry-pick Bot